# Sciurus17_TEST

./: README.md
LSTM/: 1.txt  2.txt  lstm_dataset_test.txt  neck_joint_trajectory_example.py  object_detection.cpp  pc_1.py  pc_2.py  safunc_order.py  tuantd_box_stacking.py  tuantd_object_position.cpp  txt
Tuan/: note.txt
Tuan/System Volume Information/: IndexerVolumeGuid
cwh_study_test/: cwh_lstm_study1.py  cwh_lstm_study2_add.py  cwh_lstm_study3_xyzpre.py  cwh_study（cnn降噪）.py  cwh_tensorflow.py  cwh_tensorflow22.py  cwh_tensorflow33_lstmchange (save).py  cwh_tensorflow33_lstmchange.py  cwh_tensorflow44_lstmchange.py  gazebo_classification_test（二分类）.py  just_for_test.py  time_out.py
rviz可视化/: basic_shapes.cpp  z_get_txt.py
ssd/robot/scripts/: tuantd_box_stacking_simple.py
ssd/robot/src/: object_detection.cpp  tuantd_object_detection.cpp  tuantd_test_2.cpp
tuan2/: lstm_dataset_train.txt
tuantd/: ROS➖別PC接続メモ  tuantd_box_stacking.py
tuantd/CAI/: pub.py  sub.py
tuantd/CAI/3.text out/: 1.txt  z_get_txt.py
tuantd/sciurus17_examples/: CMakeLists.txt
tuantd/sciurus17_examples/add_config/: sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
tuantd/sciurus17_examples/launch/: tuantd_box_stacking.launch  tuantd_test.launch
tuantd/sciurus17_examples/scripts/: box_stacking_example.py  box_stacking_example_real.py  leftarm_publish_go1.py  neck_joint_trajectory_example.py  talker_test.py  tuantd_box_stacking (zhichu weizhi).py  tuantd_box_stacking.py  tuantd_box_stacking_backup_1.py  tuantd_box_stacking_save.py  tuantd_box_stacking_zuixinbeifen.py  tuantd_test_1.py  tuantd_video_recorder.py
tuantd/sciurus17_examples/src/: basic_shapes (save).cpp  basic_shapes.cpp  object_detection (textout).cpp  object_detection( nottext_putout).cpp
tuantd/sciurus17_examples/src/無題のフォルダー/: dataset.txt
